# git-semver-tags

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  cliff.toml  justfile  release.toml
.github/: FUNDING.yml
.github/workflows/: CI.yml  release.yml  test_upload.yml
src/: cli.rs  lib.rs  macros.rs  main.rs
tests/: cli_test.rs  cli_tests.rs  schema.rs
tests/cmd/: basic.trycmd
