[package]
name = "git-semver-tags"
version = "0.0.4"
description = "Get all git semver tags of your repository in reverse chronological order"
authors = ["Binbiubiubiu<2632003786@qq.com>"]
categories = ["command-line-utilities"]
keywords = [
  "git-semver-tags",
  "semver",
  "tag",
  "git-tag",
  "git"
]
license = "MIT"
edition = "2021"
rust-version = "1.60.0"  # MSRV
documentation = "https://docs.rs/git-semver-tags"
readme = "README.md"
repository = "https://github.com/Binbiubiubiu/git-semver-tags"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.6.0"
semver = "1.0.14"

[dev-dependencies]
anyhow = "1.0.66"
assert_cmd = "2.0.5"
assert_fs = "1.0.7"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
