[package]
name = "git-semver-tags"
version = "0.0.8"
description = "Get all git semver tags of your repository in reverse chronological order"
authors = ["Binbiubiubiu<2632003786@qq.com>"]
categories = ["command-line-utilities"]
keywords = ["git-semver-tags", "semver", "tag", "git-tag", "git"]
license = "MIT"
edition = "2021"
rust-version = "1.60.0"                                                                   # MSRV
documentation = "https://docs.rs/git-semver-tags"
readme = "README.md"
repository = "https://github.com/Binbiubiubiu/git-semver-tags"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive", "cargo"] }
lazy_static = "1.4.0"
regex = "1.7.0"
self_update = { version = "0.34.0", features = [
  "archive-tar",
  "archive-zip",
  "compression-flate2",
  "compression-zip-deflate",
  "rustls",
], default-features = false }
semver = "1.0.14"

[dev-dependencies]
anyhow = "1.0.66"
assert_cmd = "2.0.7"
assert_fs = "1.0.10"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
