[package]
name = "git-semver-tags"
version = "0.0.10"
description = "Get all git semver tags of your repository in reverse chronological order"
authors = ["Binbiubiubiu<2632003786@qq.com>"]
categories = ["command-line-utilities"]
keywords = ["git-semver-tags", "semver", "tag", "git-tag", "git"]
license = "MIT"
edition = "2021"
rust-version = "1.60.0"                                                                   # MSRV
documentation = "https://docs.rs/git-semver-tags"
readme = "README.md"
repository = "https://github.com/Binbiubiubiu/git-semver-tags"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["self_upgrade"]
self_upgrade = ["dep:self_update"]

[dependencies]
clap = { version = "4.1.7", features = ["derive", "cargo"] }
lazy_static = "1.4.0"
regex = "1.7.1"
self_update = { version = "0.36.0", features = [
  "archive-tar",
  "archive-zip",
  "compression-flate2",
  "compression-zip-deflate",
  "rustls",
], default-features = false, optional = true }
semver = "1.0.16"

[dev-dependencies]
anyhow = "1.0.69"
assert_cmd = "2.0.8"
assert_fs = "1.0.10"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

# # Mac x86_64 and aarch64 use the same universal binary.
# [package.metadata.binstall.overrides.x86_64-apple-darwin]
# pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-universal-apple-darwin.tar.gz"

# [package.metadata.binstall.overrides.aarch64-apple-darwin]
# pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-universal-apple-darwin.tar.gz"
